<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Learning Cards</string>
    <string name="app_activity">Learning Cards</string>
    <string name="action_settings">Settings</string>
    <string name="viewAnswer">View anwser</string>
    <string name="editCardDB">Edit card database</string>
    <string name="title_activity_card_edit">Card Edit Activity</string>
    <string name="title_activity_adding_card_manually">Adding Card Manually Activity</string>
    <string name="word">word</string>
    <string name="translation">translation</string>
    <string name="tag_optional">tag (optional)</string>
    <string name="quality_optional">quality (optional)</string>
    <string name="add_card">Add card</string>
    <string name="delete_database">Delete Database</string>
    <string name="read_from_file">Read from file</string>
    <string name="save_db">Save database in file</string>
    <string name="title_activity_read_file">Read File Activity</string>
    <string name="path">path to file</string>
    <string name="force_tag">set tag to all (optional)</string>
    <string name="forcedQuality">set quality to all (optional)</string>
    <string name="import_file">Import File</string>
    <string name="card_edition">Card Edition</string>
    <string name="selectCards">Select Cards</string>
    <string name="title_activity_deck_chooser">Deck Chooser</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_no_cards_title">Empty Database</string>
    <string name="dialog_empty_deck_title">Current deck is empty</string>
    <string name="select_deck">Select deck</string>
    <string name="add_cards">Add cards</string>
    <string name="changeQuality">Change quality?</string>
    <string name="learn">Learn cards</string>
    <string name="editCards">Edit cards</string>
    <string name="importExport">Import/Export</string>
    <string name="help">Help</string>
    <string name="invert_cards">Invert cards</string>
    <string name="title_activity_cards_list">Cards List Activity</string>
    <string name="title_activity_import_export">Import Export Activity</string>
    <string name="export_file">Export file</string>
    <string name="clear_qualities">Clear qualities</string>
    <string name="deleting_db">Deleting database</string>
    <string name="saving_db">SAving database</string>
    <string name="clearing_qualities">Clearing qualities</string>
    <string name="all_tags">All tags</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="RANDOM_BY_QUALITY">Random by quality</string>
    <string name="PURE_RANDOM">Pure random</string>
    <string name="SORT_BY_ID">Sorted</string>
    <string name="verify_import_file">Import file </string>
    <string name="title_activity_import_file">Import File Activity</string>
    <string name="cant_read_external_storage">Can\'t_read_external_storage</string>
    <string name="translate_online">Translate online?</string>
    <string name="choose_lang">Choose languages</string>


</resources>
