<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ie"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bcgrd_word" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainMenuActivity" >

        <Button
            android:id="@+id/import_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/import_file" />

        <Button
            android:id="@+id/export_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/export_file" />

        <Button
            android:id="@+id/clear_qualities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_qualities" />

        <Button
            android:id="@+id/delete_db"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_database" />
    </LinearLayout>

</RelativeLayout>
