<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bcgrd_word" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainMenuActivity" >

        <Button
            android:id="@+id/learn_cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/learn" />

        <Button
            android:id="@+id/add_cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addCard" />

        <Button
            android:id="@+id/edit_cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editCards" />

        <Button
            android:id="@+id/import_export"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/importExport" />

        <Button
            android:id="@+id/help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help" />
    </LinearLayout>

</RelativeLayout>
